--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Local .terraform directories
 **/.terraform/*
 
+# Local .vscode directories
+**/.vscode/*
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
